# Simulador-compras

./: README.md  pyproject.toml
data/: carrinho.json  produtos.json
src/: carrinho.py  cupom.py  estoque.py  main.py  menu.py  produtos.py  utils.py
src/simulador/cli/: main.py  menu.py
src/simulador/domain/: carrinho.py  cupom.py  estoque.py  venda.py
src/simulador/infra/: produtos.json
tests/: test_carrinho.py  test_estoque.py  test_venda.py
